--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "test": "jest --watch"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.3",
-    "next": "13.1.6",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1",
@@ -37,9 +37,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.4"
-  },
-  "lint": "eslint .",
-  "lint:fix": "eslint --fix",
-  "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "tailwindcss": "^3.2.4",
+    "eslint-config-next": "13.2.4"
+  }
 }
