--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-<<<<<<< HEAD
-  "name": "next13-experiment",
-=======
   "name": "movies-app",
->>>>>>> b4e1bd7 (Initial commit from Create Next App)
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@next/font": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -21,15 +18,29 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@redux-devtools/core": "^3.13.1",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-=======
     "eslint": "8.35.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "next": "13.2.4",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
->>>>>>> b4e1bd7 (Initial commit from Create Next App)
+    "redux": "^4.2.1",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "tailwindcss": "^3.2.4",
+    "prettier": "^2.8.4"
   }
 }
