--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "movies-app",
+  "name": "movies-app-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
     "lint": "next lint",
     "lint:fix": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
@@ -13,10 +14,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "next": "13.2.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1",
@@ -26,6 +29,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -36,7 +40,6 @@
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.4",
-    "eslint-config-next": "13.2.4"
+    "tailwindcss": "^3.2.4"
   }
 }
